--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,13 @@ test:
   pool: 5
   timeout: 5000
 
+oit1170c:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+
+
 production:
   adapter: sqlite3
   database: db/production.sqlite3
